--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             margin-bottom: 0.5rem;
             font-size: 0.95rem;
             transition: all 0.3s ease;
+            cursor: pointer;
         }
 
         .nav-links a:hover {
