--- a/index.html
+++ b/index.html
@@ -256,9 +256,19 @@
             body { padding: 0; }
             .container { height: 100vh; max-height: none; border-radius: 0; }
             .main-layout { flex-direction: column; }
-            .sidebar { width: 100%; height: auto; border-right: none; border-bottom: 1px solid var(--charcoal-light); }
+            .sidebar { 
+                width: 100%; 
+                height: auto; 
+                border-right: none; 
+                border-bottom: 1px solid var(--charcoal-light);
+                max-height: 30vh;
+                overflow-y: auto;
+                padding: 1rem;
+            }
             .content { padding: 2rem; }
             h2 { font-size: 2rem; }
+            .nav-category-title { font-size: 0.7rem; }
+            .nav-links a { font-size: 0.85rem; padding: 0.5rem 1rem; }
         }
 
     </style>
