--- a/index.html
+++ b/index.html
@@ -261,15 +261,20 @@
                 height: auto; 
                 border-right: none; 
                 border-bottom: 1px solid var(--charcoal-light);
-                max-height: 30vh;
+                max-height: 25vh;
                 overflow-y: auto;
                 padding: 1rem;
             }
-            .content { padding: 2rem; }
-            h2 { font-size: 2rem; }
-            .nav-category-title { font-size: 0.7rem; }
-            .nav-links a { font-size: 0.85rem; padding: 0.5rem 1rem; }
+            .content { 
+            padding: 1.5rem; 
+            flex: 1; 
+            min-height: 70vh; 
+            overflow-y: auto; 
         }
+    h2 { font-size: 1.8rem; }
+    .nav-category-title { font-size: 0.65rem; }
+    .nav-links a { font-size: 0.8rem; padding: 0.4rem 0.8rem; margin-bottom: 0.3rem; }
+}
 
     </style>
     <link rel="manifest" href="manifest.json">
