--- a/index.html
+++ b/index.html
@@ -251,14 +251,25 @@
             background: var(--text-secondary);
         }
 
-        @media (max-width: 900px) {
-    /* Existing styles... */
-
+       @media (max-width: 900px) {
+            body { padding: 0; }
+            .container { height: 100vh; max-height: none; border-radius: 0; }
+            .main-layout { flex-direction: column; }
             .sidebar {
-                max-height: 30vh; /* Limit sidebar to 30% of viewport height; adjust as needed */
-                overflow-y: auto; /* Enable scrolling if content overflows */
-            }
-        }
+                width: 100%;
+                height: auto; /* Reset to auto */
+                max-height: 40vh; /* Increased to 40% for more nav space */
+                overflow-y: auto; /* Scroll if needed */
+                border-bottom: 1px solid var(--charcoal-light);
+                border-right: none;
+                }
+            .content {
+                flex: 1; /* Ensure content takes remaining space */
+                padding: 2rem;
+                overflow-y: auto; /* Allow content to scroll if needed */
+       }
+    h2 { font-size: 2rem; }
+}
     </style>
 </head>
 <body>
